--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,99 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_collapseMode="pin"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <!-- Total confirmed cases-->
-    <RelativeLayout
-        android:id="@+id/rlTotalConfirmedCases"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/appBarLayout"
-        android:paddingStart="@dimen/relative_layout_padding"
-        android:paddingTop="@dimen/relative_layout_padding"
-        android:paddingBottom="@dimen/relative_layout_padding">
-
-        <TextView
-            android:id="@+id/heading_total_confirmed_cases"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/total_confirmed_cases"
-            style="@style/MainActivityHeadingText" />
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-        <TextView
-            android:id="@+id/total_confirmed_cases_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/heading_total_confirmed_cases"
-            style="@style/MainActivityContentText" />
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeToRefresh"
+            android:layout_below="@id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardViewSearchRegion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/inputRegion"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/relative_layout_padding_medium"
+                        android:paddingEnd="@dimen/relative_layout_padding_medium"
+                        android:layout_marginBottom="4dp"
+                        style="@style/Widget.CoronaTracker.TextInputLayout.ExposedDropdown">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/etRegion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/segoe_ui"
+                            android:inputType="text"
+                            android:focusableInTouchMode="false"
+                            android:singleLine="true" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
+                    android:layout_below="@id/cardViewSearchRegion">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <!-- Total confirmed cases-->
+
+                        <!-- Total active cases-->
+                        <RelativeLayout
+                            android:id="@+id/rlTotalConfirmedCases"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingStart="@dimen/relative_layout_padding"
+                            android:paddingTop="@dimen/relative_layout_padding"
+                            android:paddingEnd="@dimen/relative_layout_padding">
+
+                            <TextView
+                                android:id="@+id/heading_total_confirmed_cases"
+                                style="@style/MainActivityHeadingText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/total_confirmed_cases" />
+
+                            <TextView
+                                android:id="@+id/total_confirmed_cases_number"
+                                style="@style/MainActivityContentText.Large"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/heading_total_confirmed_cases"
+                                android:textColor="@color/colorTotalConfirmed" />
+
+                            <TextView
+                                android:id="@+id/region"
+                                style="@style/MainActivityHeadingText.Large"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:textColor="@color/colorTotalConfirmed" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/rlTotalActiveCases"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/rlTotalConfirmedCases"
+                            android:paddingStart="@dimen/relative_layout_padding"
+                            android:paddingEnd="@dimen/relative_layout_padding"
+                            android:paddingTop="@dimen/relative_layout_padding"
+                            android:paddingBottom="@dimen/relative_layout_padding">
+
+                            <TextView
+                                android:id="@+id/heading_total_active_cases"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/total_active_cases"
+                                style="@style/MainActivityHeadingText" />
+
+                            <TextView
+                                android:id="@+id/total_active_cases_number"
+                                style="@style/MainActivityContentText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/heading_total_active_cases"
+
+                                android:textColor="@color/colorTotalActive" />
+                        </RelativeLayout>
+
+                        <!-- Total recovered-->
+                        <RelativeLayout
+                            android:id="@+id/rlTotalRecoveredCases"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/rlTotalActiveCases"
+                            android:paddingStart="@dimen/relative_layout_padding"
+                            android:paddingEnd="@dimen/relative_layout_padding"
+                            android:paddingBottom="@dimen/relative_layout_padding">
+
+                            <TextView
+                                android:id="@+id/heading_total_recovered_cases"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/total_recovered_cases"
+                                style="@style/MainActivityHeadingText" />
+
+                            <TextView
+                                android:id="@+id/heading_total_recovered_cases_number"
+                                style="@style/MainActivityContentText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/heading_total_recovered_cases"
+                                android:textColor="@color/colorTotalRecovered" />
+                        </RelativeLayout>
+
+                        <!-- Total death-->
+                        <RelativeLayout
+                            android:id="@+id/rlTotalDeathCases"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/rlTotalRecoveredCases"
+                            android:paddingStart="@dimen/relative_layout_padding"
+                            android:paddingEnd="@dimen/relative_layout_padding"
+                            android:paddingBottom="@dimen/relative_layout_padding">
+
+                            <TextView
+                                android:id="@+id/heading_total_death_cases"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/total_death_cases"
+                                style="@style/MainActivityHeadingText" />
+
+                            <TextView
+                                android:id="@+id/total_confirmed_death_number"
+                                style="@style/MainActivityContentText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/heading_total_death_cases"
+                                android:textColor="@color/colorTotalDeath" />
+                        </RelativeLayout>
+                    </RelativeLayout>
+
+
+                </com.google.android.material.card.MaterialCardView>
+            </RelativeLayout>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </RelativeLayout>
-
-    <!-- Total death-->
-    <RelativeLayout
-        android:id="@+id/rlTotalDeathCases"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rlTotalConfirmedCases"
-        android:paddingStart="@dimen/relative_layout_padding"
-        android:paddingBottom="@dimen/relative_layout_padding">
-
-        <TextView
-            android:id="@+id/heading_total_death_cases"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/total_death_cases"
-            style="@style/MainActivityHeadingText" />
-
-        <TextView
-            android:id="@+id/total_confirmed_death_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/heading_total_death_cases"
-            style="@style/MainActivityContentText" />
-    </RelativeLayout>
-
-    <!-- Total recovered-->
-    <RelativeLayout
-        android:id="@+id/rlTotalRecoveredCases"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rlTotalDeathCases"
-        android:paddingStart="@dimen/relative_layout_padding"
-        android:paddingBottom="@dimen/relative_layout_padding">
-
-        <TextView
-            android:id="@+id/heading_total_recovered_cases"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/total_confirmed_cases"
-            style="@style/MainActivityHeadingText" />
-
-        <TextView
-            android:id="@+id/heading_total_recovered_cases_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/heading_total_recovered_cases"
-            style="@style/MainActivityContentText" />
-    </RelativeLayout>
-
 
 
 
 </RelativeLayout>
+
