--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="relative_layout_padding">16dp</dimen>
-    <dimen name="heading_text_size">14sp</dimen>'
+    <dimen name="relative_layout_padding_medium">8dp</dimen>
+    <dimen name="heading_text_size">14sp</dimen>
+    <dimen name="heading_text_size_large">20sp</dimen>
     <dimen name="value_text_size">18sp</dimen>
+    <dimen name="value_text_size_large">20sp</dimen>
 </resources>
